# skillmaster

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  PUSH_TO_GITHUB.md  README.md  index.html  latest.json  package-lock.json  package.json  push-to-github.bat  push-to-github.sh  vite.config.ts  准备就绪.md  如何推送到GitHub.txt
.github/workflows/: build.yml  release.yml
docs/: DEVELOPMENT.md  IMPORT_SKILLS.md  INSTALL.md  README.md  RELEASE.md  SUPPORTED_TOOLS.md  UI_COMPONENTS.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  skills.rs  sync.rs  tools.rs
src-tauri/src/models/: mod.rs  skill.rs  tool.rs
src-tauri/src/services/: detector.rs  mod.rs  repo.rs  sync.rs
src-tauri/src/utils/: file.rs  mod.rs  path.rs
src/components/ui/: Badge.vue
src/components/ui/badge/: index.ts
src/components/ui/button/: Button.vue
src/router/: index.ts
src/stores/: skill.ts  tool.ts
src/styles/: index.css
src/types/: index.ts
src/views/: Dashboard.vue  Layout.vue  Settings.vue  Skills.vue  Tools.vue
